src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__library_ui_tests__tests__snapshot_tests__library_ui_renders_episode_details_over_series.snap
---
source: src/ui/sonarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title ▼                          Year    Network       Status    Rating     Type       Quality Profile    Language      Size        Monitored  Tags               
=> Test                             2022    HBO           Continuin TV-MA      Standard   Bluray-1080p       English       59.51 GB    🏷                             
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Titl╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮      │        
        │Over│ Episodes │ History │ Manual Search                                                                                                    │      │        
        │Netw│──────╭  Episode Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮─────│      │        
        │Stat│   🏷  │ Details │ History │ File │ Manual Search                                                                                 │file │      │        
        │Genr│=> 🏷  │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│p    │      │        
        │Rati│      │Some episode details:                                                                                                     │     │      │        
        │Year│      │                                                                                                                          │     │      │        
        │Runt│      │                                                                                                                          │     │      │        
        │Path│      │                                                                                                                          │     │      │        
        │Qual│      │                                                                                                                          │     │      │        
        │Lang│      │                                                                                                                          │     │      │        
        │Moni│      │                                                                                                                          │     │      │        
        │Size│      │                                                                                                                          │     │      │        
        │    │      │                                                                                                                          │     │      │        
        │    │      │                                                                                                                          │     │      │        
        │    │      │                                                                                                                          │     │      │        
        │╭  S│      │                                                                                                                          │     │─────╮│        
        ││ Se│      │                                                                                                                          │     │     ││        
        ││───│      │                                                                                                                          │     │─────││        
        ││   │      │                                                                                                                          │     │     ││        
        ││=> │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
