src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__library_ui_tests__tests__snapshot_tests__library_ui_renders_season_details_over_series.snap
---
source: src/ui/sonarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Title ▼                          Year    Network       Status    Rating     Type       Quality Profile    Language      Size        Monitored  Tags               
=> Test                             2022    HBO           Continuin TV-MA      Standard   Bluray-1080p       English       59.51 GB    🏷                             
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Titl╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮      │        
        │Over│ Episodes │ History │ Manual Search                                                                                                    │      │        
        │Netw│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│      │        
        │Stat│   🏷     #      Title                                                          Air Date                  Size on Disk  Quality Profile │      │        
        │Genr│=> 🏷     1      Something cool                                                 2024-02-10 07:28:45 UTC   3.30 GB       Bluray-1080p    │      │        
        │Rati│                                                                                                                                       │      │        
        │Year│                                                                                                                                       │      │        
        │Runt│                                                                                                                                       │      │        
        │Path│                                                                                                                                       │      │        
        │Qual│                                                                                                                                       │      │        
        │Lang│                                                                                                                                       │      │        
        │Moni│                                                                                                                                       │      │        
        │Size│                                                                                                                                       │      │        
        │    │                                                                                                                                       │      │        
        │    │                                                                                                                                       │      │        
        │    │                                                                                                                                       │      │        
        │╭  S│                                                                                                                                       │─────╮│        
        ││ Se│                                                                                                                                       │     ││        
        ││───│                                                                                                                                       │─────││        
        ││   │                                                                                                                                       │     ││        
        ││=> │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
